--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-tensorflow
-numpy
-Pillow
-gdown
+tensorflow==2.13.0
+keras==2.13.1
+streamlit==1.29.0
+Pillow==10.0.0
+numpy==1.24.3
+gdown==4.7.1
