--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-tensorflow==2.13.0
-keras==2.13.1
-streamlit==1.29.0
+tensorflow==2.18.0
+keras==2.18.0
+streamlit==1.42.1
 Pillow==10.0.0
-numpy==1.24.3
+numpy>=1.24.3
 gdown==4.7.1
