--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,15 @@
-# Core ML frameworks
-tensorflow-cpu==2.16.1
-numpy==1.24.3
-protobuf>=4.21.0
-
-# Web framework
+# Core dependencies with Python 3.12 compatible versions
+numpy>=1.26.0  # this version supports Python 3.12
+tensorflow-cpu>=2.16.1
 streamlit==1.42.1
+Pillow>=10.0.0
+gdown>=4.7.1
 
-# Image processing
-Pillow==10.0.0
-
-# File downloading
-gdown==4.7.1
-
-# Additional dependencies to prevent conflicts
+# Additional dependencies
 typing-extensions>=4.5.0
-packaging>=20.0
-six>=1.15.0
-wheel>=0.38.0
-setuptools>=41.0.0
-absl-py>=1.0.0
-grpcio>=1.48.2
-h5py>=3.8.0
-requests>=2.28.0
-urllib3<2.0.0
-python-dateutil>=2.8.2
+packaging>=23.0
+wheel>=0.41.0
+setuptools>=69.0.0
+h5py>=3.10.0
+requests>=2.31.0
+urllib3>=2.0.0
