--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-# Core dependencies with Python 3.12 compatible versions
-numpy>=1.26.0  # this version supports Python 3.12
-tensorflow-cpu>=2.16.1
+# Core dependencies
+numpy>=1.26.0  
+tensorflow-cpu==2.15.0  # Stable version
 streamlit==1.42.1
 Pillow>=10.0.0
 gdown>=4.7.1
@@ -13,3 +13,4 @@ setuptools>=69.0.0
 h5py>=3.10.0
 requests>=2.31.0
 urllib3>=2.0.0
+protobuf>=3.20.0  # Added for TensorFlow compatibility
