--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy==1.26.2
 pillow==10.3.0
 streamlit==1.40.0
-tensorflow-cpu==2.17.1
+tensorflow-cpu==2.15.0  # Changed from 2.17.1 to latest stable version
 gdown==5.2.0
