--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.115.8
-gdown==5.2.0
-keras==3.4.1
-numpy==2.2.3
-Pillow==11.1.0
-streamlit==1.40.0
-tensorflow==2.17.0
-tensorflow_intel==2.17.0
-uvicorn==0.34.0
+fastapi<0.115.8
+gdown<5.2.0
+keras<3.4.1
+numpy<2.2.3
+Pillow<11.1.0
+streamlit<1.40.0
+tensorflow<2.17.0
+tensorflow_intel<2.17.0
+uvicorn<0.34.0
